cmake_minimum_required(VERSION 3.1.3)
PROJECT(Common)

AUX_SOURCE_DIRECTORY(./ SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Core SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Coroutine SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Define SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Global SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Manager SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Module SUPER_SRC)
AUX_SOURCE_DIRECTORY(./NetWork SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Object SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Other SUPER_SRC)

AUX_SOURCE_DIRECTORY(./Thread SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Timer SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Util SUPER_SRC)

AUX_SOURCE_DIRECTORY(./Script SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/LuaExtension SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/LuaType SUPER_SRC)
AUX_SOURCE_DIRECTORY(./Script/Util SUPER_SRC)


INCLUDE_DIRECTORIES(./ SUPER_SRC)
INCLUDE_DIRECTORIES(./Core SUPER_SRC)
INCLUDE_DIRECTORIES(./Coroutine SUPER_SRC)
INCLUDE_DIRECTORIES(./Define SUPER_SRC)
INCLUDE_DIRECTORIES(./Global SUPER_SRC)
INCLUDE_DIRECTORIES(./Manager SUPER_SRC)
INCLUDE_DIRECTORIES(./Module SUPER_SRC)
INCLUDE_DIRECTORIES(./NetWork SUPER_SRC)
INCLUDE_DIRECTORIES(./Object SUPER_SRC)
INCLUDE_DIRECTORIES(./Other SUPER_SRC)

INCLUDE_DIRECTORIES(./Thread SUPER_SRC)
INCLUDE_DIRECTORIES(./Timer SUPER_SRC)
INCLUDE_DIRECTORIES(./Util SUPER_SRC)

INCLUDE_DIRECTORIES(./Script SUPER_SRC)
INCLUDE_DIRECTORIES(./Script/LuaExtension SUPER_SRC)
INCLUDE_DIRECTORIES(./Script/LuaType SUPER_SRC)
INCLUDE_DIRECTORIES(./Script/Util SUPER_SRC)


INCLUDE_DIRECTORIES(../ServerData)
INCLUDE_DIRECTORIES(../Libs/include/rapidjson)
INCLUDE_DIRECTORIES(../Libs/include/protobuf)
INCLUDE_DIRECTORIES(../Libs/include/asio)
INCLUDE_DIRECTORIES(../Libs/include/lua5.3)
INCLUDE_DIRECTORIES(../Libs/include/spdlog)

LINK_DIRECTORIES(../Libs/lib)
SET(CMAKE_CXX_COMPILER "ccache")
SET(CMAKE_CXX_COMPILER_ARG1 "g++") 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -std=gnu++11" )
SET(CMAKE_BUILD_TYPE Debug)
SET(LIBRARY_OUTPUT_PATH ../Libs/lib)
ADD_LIBRARY(Common STATIC ${SUPER_SRC})

#TARGET_LINK_LIBRARIES(Common protobuf ${MY_ADDLIB})
