cmake_minimum_required(VERSION 3.1.3)
PROJECT(LoginSrv)
AUX_SOURCE_DIRECTORY(./ SCENE_SRC)
AUX_SOURCE_DIRECTORY(./App SCENE_SRC)
AUX_SOURCE_DIRECTORY(./Json SCENE_SRC)
AUX_SOURCE_DIRECTORY(./NetWork SCENE_SRC)


INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../GM)
INCLUDE_DIRECTORIES(../../Libs/include/rapidjson)
INCLUDE_DIRECTORIES(../../Libs/include/asio)
SET(CMAKE_CXX_COMPILER "ccache")
SET(CMAKE_CXX_COMPILER_ARG1 "g++") 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -std=gnu++11" )
SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(GM ${SCENE_SRC})
TARGET_LINK_LIBRARIES(GM pthread)

SET(EXECUTABLE_OUTPUT_PATH ../../bin/)



