cmake_minimum_required(VERSION 3.1.3)
PROJECT(ProxySrv)

AUX_SOURCE_DIRECTORY(./ SCENE_SRC)
AUX_SOURCE_DIRECTORY(./Manager SCENE_SRC)
AUX_SOURCE_DIRECTORY(./ProtocBuf SCENE_SRC)
AUX_SOURCE_DIRECTORY(./RPC SCENE_SRC)

INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./Manager)
INCLUDE_DIRECTORIES(./ProtocBuf)
INCLUDE_DIRECTORIES(./RPC)
INCLUDE_DIRECTORIES(../../Libs/include/rapidjson)
INCLUDE_DIRECTORIES(../../Libs/include/protobuf)
INCLUDE_DIRECTORIES(../../Libs/include/asio)
INCLUDE_DIRECTORIES(../../Libs/include/spdlog)
INCLUDE_DIRECTORIES(../../Libs/include/lua5.3)
INCLUDE_DIRECTORIES(../../Common)

LINK_DIRECTORIES(../../Libs/lib)
SET(CMAKE_CXX_COMPILER "ccache")
SET(CMAKE_CXX_COMPILER_ARG1 "g++") 

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -std=gnu++11" )
SET(CMAKE_BUILD_TYPE Debug)

ADD_EXECUTABLE(ProxySrv ${SCENE_SRC})
TARGET_LINK_LIBRARIES(ProxySrv Common protobuf Lua53 pthread ${MY_ADDLIB})

SET(EXECUTABLE_OUTPUT_PATH ../../bin/)



